--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/tailwind": "^5.1.2",
-    "astro": "^4.16.8",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
+    "@astrojs/mdx": "^4.0.2",
+    "@astrojs/tailwind": "^5.1.3",
+    "astro": "^5.0.5",
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15"
