--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@astrojs/tailwind": "^5.1.3",
     "astro": "^5.0.5",
     "tailwindcss": "^3.4.16",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "unplugin-fonts": "^1.3.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15"
